--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -2,6 +2,6 @@
     display: flex;
     gap: 1rem;
     align-items: center;
-    padding: 0rem 2rem;
+    padding-left: 1rem;
     background-color: #E4E4E7;
 }
