--- a/src/components/product_card/ProductCard.module.css
+++ b/src/components/product_card/ProductCard.module.css
@@ -104,3 +104,8 @@
 .remove-button:hover {
   box-shadow: 0 2px 2px grey;
 }
+
+.product-count-in-cart {
+  text-align: center;
+  color: var(--neutral-950);
+}
