--- a/src/components/home/home_header/HomeHeader.module.css
+++ b/src/components/home/home_header/HomeHeader.module.css
@@ -80,4 +80,14 @@
   .user-container {
     flex-direction: column;
   }
+
+  .header-container {
+    padding: 1rem 1rem;
+  }
+
+  .header-container__right {
+    gap: 1rem;
+  }
+  
 }
+
